# testjemalloc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
jemalloc/: CMakeLists.txt
jemalloc/include/jemalloc/: CMakeLists.txt  jemalloc.h
jemalloc/include/jemalloc/internal/: CMakeLists.txt  bitmap.h  jemalloc_internal_defs.h  jemalloc_internal_macros.h
jemalloc/src/: util.c
rpmalloc/: rpallocate_win.cpp  rpmalloc.cpp  rpmalloc_new_delete.h
